<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>master</groupId>
	<artifactId>java</artifactId>
	<version>1.0.1</version>

	<description>Proficient in Java, the conquest of Java</description>

	<developers>
		<developer>
			<name>jason.liuhongming</name>
		</developer>
	</developers>

	<properties>
		<!-- dependencies -->
		<javassist.version>3.18.0-GA</javassist.version>
		<asm.version>3.3.1</asm.version>
		<commons-lang.version>3.3.2</commons-lang.version>
		<commons-io.version>2.4</commons-io.version>
		<google.guava.version>18.0</google.guava.version>
		<jdk.version>1.7</jdk.version>
		<joda.version>2.3</joda.version>
		<junit.version>4.11</junit.version>
        <netty.version>4.0.28.Final</netty.version>

		<!-- plugins -->
		<clean.plugin.version>2.4.1</clean.plugin.version>
		<compiler.plugin.version>3.1</compiler.plugin.version>
		<resources.plugin.version>2.6</resources.plugin.version>
		<dependency.plugin.version>2.1</dependency.plugin.version>
		<surefire.plugin.version>2.16</surefire.plugin.version>
		<jar.plugin.version>2.4</jar.plugin.version>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<!-- 编译 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler.plugin.version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
					</configuration>
				</plugin>
				<!-- 测试 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire.plugin.version}</version>
					<configuration>
						<!-- 命令参数 -->
						<argLine>-Xms512m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
						<!-- Add custom resources/jars to your classpath -->
						<additionalClasspathElements>
							<additionalClasspathElement>${project.build.sourceDirectory}</additionalClasspathElement>
						</additionalClasspathElements>
						<includes>
							<include>**/*Test.java</include>
						</includes>
						<!-- 忽略测试 -->
						<skip>true</skip>
						<!-- 忽略测试异常 -->
						<!-- <testFailureIgnore>true</testFailureIgnore> -->
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<!-- 发布 -->
	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Releases Repository</name>
			<url>http://localhost:8081/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Snapshot Repository</name>
			<url>http://localhost:8081/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<!-- 依赖 -->
	<dependencies>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${netty.version}</version>
        </dependency>
		<dependency>
    		<groupId>org.javassist</groupId>
    		<artifactId>javassist</artifactId>
    		<version>${javassist.version}</version>
		</dependency>
		<dependency>
			<groupId>asm</groupId>
			<artifactId>asm</artifactId>
			<version>${asm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${google.guava.version}</version>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>${joda.version}</version>
		</dependency>		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
	</dependencies>
</project>